--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,34 @@
 _site/*
 _theme_packages/*
 
-Thumbs.db
-.DS_Store
-
 !.gitkeep
 
 .rbenv-version
 .rvmrc
+
+# Compiled source #
+###################
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
+
+
+# Logs and databases #
+######################
+*.log
+*.sql
+*.sqlite
+
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
