--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 markdown: rdiscount
 permalink: /:year/:month/:day/:title/
 url: http://hamniba.github.io
-author: Hamniba
+author: owen
 pygments: true
 safe: true
 auto: true
